ed: Functional implementation of ed

--- a/Utils/ed/makefile
+++ b/Utils/ed/makefile
@@ -16,7 +16,7 @@ SRC_DIR = src
 _LIBS = libc.a libarg.a
 LIBS = $(patsubst %,$(LIB_DIR)/%,$(_LIBS))
 
-_OBJ = main.o editor.o
+_OBJ = main.o editor.o parser.o
 OBJ = $(patsubst %,$(BUILD_DIR)/%,$(_OBJ))
 
 RAW_INCLUDES = $(patsubst %, $(INCLUDE_DIR)/%, $(INCLUDES))
