--- a/Libraries/libriscv/makefile
+++ b/Libraries/libriscv/makefile
@@ -14,7 +14,7 @@ SRC_DIR = src
 _LIBS = 
 LIBS = $(patsubst %,$(LIB_DIR)/%,$(_LIBS))
 
-_OBJ = instructions.o
+_OBJ = instructions.o assemble.o
 OBJ = $(patsubst %,$(BUILD_DIR)/%,$(_OBJ))
 
 $(OUTPUT_DIR)/libriscv.a : $(OUTPUT_DIR) $(BUILD_DIR) $(OBJ) $(LIBS)
